kubernetes-AWS-EKS/EKS-deploy/EKS-K8S-Vault/eks-vault/VPC.tf
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"

  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "${var.env}-main"
  }
}
